<resources>
    <string name="app_name">movie_db_training</string>
    <string name="latest_movie">Latest Movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_list">Your List</string>
    <string name="app_label">MovieDB</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release Date: %s</string>
    <string name="rating">%s/10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_genre_title">Genres</string>
    <string name="overview">Overview</string>
    <string name="review">Review (%d)</string>
    <string name="video">Video</string>
    <string name="see_all">SEE ALL</string>
    <string name="hot_trailer">Hot Trailer</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Send Feedback</string>
    <string name="menu_about">About</string>
    <string name="cast">The Cast</string>
    <string name="biography">Biography</string>
    <string name="movie_credits">Movie Credits</string>
</resources>
